@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-27T08:07:49Z",
+  "timestamp" : "2024-01-27T16:06:31Z",
   "count_outdated" : 655,
   "uniques_outdated" : 311,
-  "count" : 677,
+  "count" : 678,
   "uniques" : 325,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2024-01-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
